# embedded-log

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: test.yml
include/: log.h
src/: log.c
test/: meson.build  test_log.c
